# zk-24

./: Cargo.toml  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml
backend/data-models/: Cargo.toml
backend/data-models/src/: decision.rs  inspection.rs  lib.rs  risk.rs  sensor.rs  tower.rs  video.rs  weather.rs
backend/decision-engine/: Cargo.toml
backend/decision-engine/src/: lib.rs
backend/risk-engine/: Cargo.toml
backend/risk-engine/src/: lib.rs
backend/sensor-ingest/: Cargo.toml
backend/sensor-ingest/src/: lib.rs
backend/src/: clickhouse_store.rs  config.rs  handlers.rs  main.rs  routes.rs  state.rs  websocket.rs
deploy/clickhouse/: config.xml  init-schema.sql  users.xml
deploy/docker/: backend.Dockerfile  frontend.Dockerfile
deploy/nats/: nats-server.conf
deploy/nginx/conf.d/: default.conf
deploy/prometheus/: prometheus.yml
deploy/scripts/: entrypoint.sh  frontend-entrypoint.sh
deploy/secrets/: grafana-admin-password.txt
frontend/: package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: entry.express.tsx  entry.ssr.tsx  global.css  root.tsx
frontend/src/components/: HistoryCharts.tsx  SpectrumAnalyzer.tsx  Tower3DModel.tsx
frontend/src/components/router-head/: router-head.tsx
frontend/src/routes/: index.tsx  layout.tsx
frontend/src/routes/decisions/: index.tsx
frontend/src/routes/inspections/: index.tsx
frontend/src/routes/monitor/: index.tsx
frontend/src/routes/risk/: index.tsx
frontend/src/routes/towers/: index.tsx
frontend/src/routes/towers/[id]/: index.tsx
frontend/src/routes/video/: index.tsx
frontend/src/routes/weather/: index.tsx
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  format.ts
