[package]
name = "backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cableway-monitor"
path = "src/main.rs"

[dependencies]
data-models = { path = "data-models" }
sensor-ingest = { path = "sensor-ingest" }
risk-engine = { path = "risk-engine" }
decision-engine = { path = "decision-engine" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-nats = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
envy = "0.4"

clickhouse = { workspace = true }
klickhouse = { workspace = true }
