[package]
name = "risk-engine"
version.workspace = true
edition.workspace = true

[dependencies]
data-models = { path = "../data-models" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-nats = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
